--- a/.github/workflows/release-action-call.yml
+++ b/.github/workflows/release-action-call.yml
@@ -1,4 +1,4 @@
-name: Release action
+name: release-action-call
 # Call the reusable workflow release-solution-to-test-with-inputs.yml.yml
 # Release your solution to prod when you create a new release.
 
