--- a/.github/workflows/release-solution-to-prod-with-inputs.yml
+++ b/.github/workflows/release-solution-to-prod-with-inputs.yml
@@ -115,7 +115,7 @@ jobs:
     - name: Import solution to prod env
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
-        environment-url: ${{inputs.PROD_ENVIRONMENT_URL}}
+        environment-url: ${{inputs.PRODUCTION_ENVIRONMENT_URL}}
         app-id: ${{inputs.CLIENT_ID}}
         client-secret: ${{ secrets.envSecret }}
         tenant-id: ${{inputs.TENANT_ID}}
