--- a/.github/workflows/release-action-call.yml
+++ b/.github/workflows/release-action-call.yml
@@ -14,7 +14,7 @@ jobs:
       solution_name: KaplanALMApp
       #Update your values here
       BUILD_ENVIRONMENT_URL: https://kaplandev.crm.dynamics.com
-      PROD_ENVIRONMENT_URL: https://kaplantest.crm.dynamics.com
+      PRODUCTION_ENVIRONMENT_URL: https://kaplantest.crm.dynamics.com
       CLIENT_ID: dc17a2d1-4c56-459d-b055-6fc05e6346cc
       TENANT_ID: fe04995f-e9b4-4993-b50a-cacce60d6b5e     
     secrets:
